--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./bannr1.webp" class="d-block w-100" loading="lazy">
+          <img src=".\bannr1.webp" class="d-block w-100" loading="lazy">
         </div>
         <div class="carousel-item">
           <img src="./images/bannr2.webp" class="d-block w-100" loading="lazy">
