--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
           <img src="bannr1.webp" class="d-block w-100" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="./images/bannr2.webp" class="d-block w-100" loading="lazy">
+          <img src="bannr2.webp" class="d-block w-100" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="./images/bannr3.jpg" class="d-block w-100" loading="lazy">
+          <img src="bannr3.jpg" class="d-block w-100" loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="./images/bannr4.webp" class="d-block w-100"  loading="lazy">
+          <img src="bannr4.webp" class="d-block w-100"  loading="lazy">
         </div>
         <div class="carousel-item">
-          <img src="./images/bannr5.jpg" class="d-block w-100"  loading="lazy">
+          <img src="bannr5.jpg" class="d-block w-100"  loading="lazy">
         </div>
       </div>
     </div>
@@ -35,13 +35,13 @@
   <header class="header_wrapper">
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a href="#"><img src="./images/logo.png"></a>
+          <a href="#"><img src="logo.png"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><a href="#"><img src="./images/logo.png"></a></h5>
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><a href="#"><img src="logo.png"></a></h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -50,7 +50,7 @@
                   <a class="nav-link mx-lg-2 active" aria-current="page" href="#home" style="color: red;">Cafe Menu</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mx-lg-2" href="#about">E-shop<img class="cart" src="./images/cart-icon.gif"></a>
+                  <a class="nav-link mx-lg-2" href="#about">E-shop<img class="cart" src="cart-icon.gif"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link mx-lg-2" href="#qualification">Online Order</a>
@@ -90,9 +90,9 @@
     </section>
      <!-- Background image -->
     <div class="image-container">
-      <img src="./images/parallaxBackground.jpg" alt="Background Image" class="background-image">
+      <img src="parallaxBackground.jpg" alt="Background Image" class="background-image">
       <div class="overlay">
-        <img src="./images/white.png" alt="Overlay Image" class="overlay-image">
+        <img src="white.png" alt="Overlay Image" class="overlay-image">
         <button class="overlay-button">READ OUR STORY</button>
       </div>
     </div> 
@@ -100,10 +100,10 @@
     <!-- social medi icon -->
     <section>
       <div class="container d-flex justify-content-center p-3">
-        <img src="./images/insta.jpg" width="44px">
-            <img src="./images/fb.jpg" width="44px">
-            <img src="./images/twit.jpg" width="44px">
-            <img src="./images/link.jpg" width="44px">
+        <img src="insta.jpg" width="44px">
+            <img src="fb.jpg" width="44px">
+            <img src="twit.jpg" width="44px">
+            <img src="link.jpg" width="44px">
       </div>
     </section>
     <hr>
